--- a/package.json
+++ b/package.json
@@ -104,5 +104,22 @@
     "ts-node": "10.5.0",
     "ts-node-dev": "1.1.8",
     "typescript": "4.5.5"
+  },
+  "resolutions": {
+    "**/postcss": "^8.2.13",
+    "**/trim-off-newlines": "^1.0.3",
+    "**/ansi-regex": "^5.0.1",
+    "**/ansi-html": "https://registry.yarnpkg.com/ansi-html-community/-/ansi-html-community-0.0.8.tgz#69fbc4d6ccbe383f9736934ae34c3f8290f1bf41",
+    "**/hosted-git-info": "^2.8.9",
+    "**/lodash": "^4.17.21",
+    "**/cached-path-relative": "^1.1.0",
+    "**/shelljs": "^0.8.5",
+    "**/nanoid": "^3.1.31",
+    "**/tmpl": "^1.0.5",
+    "**/remark-html": "^13.0.2",
+    "**/path-parse": "^1.0.7",
+    "**/glob-parent": "^5.1.2",
+    "**/trim-newlines": "^3.0.1",
+    "**/ws": "^7.4.6"
   }
 }
